data/derived/fa15/progs/unify/prog0537.ml.out
Characters 81-83:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a list
       but an expression was expected of type ('a -> 'a) list
       The type variable 'a occurs inside 'a -> 'a
